hphp/hack/test/typecheck/inout/bad_inout_use_lvalue1.php.exp
File "bad_inout_use_lvalue1.php", line 6, characters 11-11:
literal is not allowed in write context (Parsing[1002])
